--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-    "name": "template-svelte",
-    "description": "A Phaser 3 project template that demonstrates Svelte communication and uses Vite for bundling.",
+    "name": "lang-snake",
+    "description": "A spelling snake game.",
     "version": "1.2.0",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/phaserjs/template-svelte.git"
+        "url": "git+https://github.com/ZSmain/lang-snake.git"
     },
-    "author": "Phaser Studio <support@phaser.io> (https://phaser.io/)",
-    "license": "MIT",
-    "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
-    "bugs": {
-        "url": "https://github.com/phaserjs/template-svelte/issues"
-    },
-    "homepage": "https://github.com/phaserjs/template-svelte#readme",
+    "author": "Ismail Zouaoui <ishmael.zouaoui@gmail.com> (https://ismailzouaoui.com)",
     "keywords": [
         "phaser",
         "phaser3",
@@ -27,17 +21,17 @@
         "preview": "vite preview --outDir build"
     },
     "devDependencies": {
+        "@sveltejs/adapter-auto": "6.1.0",
+        "@sveltejs/adapter-static": "3.0.9",
+        "@sveltejs/kit": "2.34.1",
+        "@sveltejs/vite-plugin-svelte": "6.1.3",
         "@tsconfig/svelte": "^5.0.4",
-        "@sveltejs/adapter-auto": "6.0.0",
-        "@sveltejs/adapter-static": "3.0.8",
-        "@sveltejs/kit": "2.20.7",
-        "@sveltejs/vite-plugin-svelte": "5.0.3",
-        "svelte": "5.23.1",
-        "svelte-check": "^4.0.2",
-        "terser": "5.39.0",
-        "tslib": "2.7.0",
-        "typescript": "5.7.2",
-        "vite": "6.3.1"
+        "svelte": "5.38.2",
+        "svelte-check": "^4.3.1",
+        "terser": "5.43.1",
+        "tslib": "2.8.1",
+        "typescript": "5.9.2",
+        "vite": "7.1.3"
     },
     "type": "module",
     "dependencies": {
